# VID-Fusion

./: README.md
benchmark_publisher/: package.xml
benchmark_publisher/data/: readme.txt
benchmark_publisher/data/line_with_force_gt/: force_gt.txt
benchmark_publisher/data/tarj8_with_gt/: gt.txt
benchmark_publisher/launch/: publish.launch
benchmark_publisher/src/: benchmark_publisher_node.cpp
config/: vins_rviz_config.rviz
config/experiments/: drone.yaml  real_drone.yaml
config/rotors_sim/: drone_sim.yaml  sim_config.yaml
dynamic_model/: CMakeLists.txt  package.xml
dynamic_model/config/: dynamic_model.rviz
dynamic_model/include/: dynamic_model.h
dynamic_model/launch/: dynamic_model.launch
dynamic_model/src/: dynamic_model.cpp
feature_tracker/src/: feature_tracker_node.cpp
pose_graph/src/: pose_graph_node.cpp
system_identification/: CMakeLists.txt  package.xml
system_identification/include/: system_identification.h  system_identification.h.rviz
system_identification/launch/: system_identify.launch
system_identification/src/: system_identification.cpp  system_identification.rviz
utilities/: readme.md
utilities/quadrotor_msgs/: CMakeLists.txt  package.xml
utilities/quadrotor_msgs/msg/: AutopilotFeedback.msg  LowLevelFeedback.msg
vid_estimator/: CMakeLists.txt  package.xml
vid_estimator/launch/: vid_realworld.launch  vid_sim.launch  vins_rviz.launch
vid_estimator/src/: estimator.cpp  estimator.h  estimator_node.cpp  parameters.cpp  parameters.h
vid_estimator/src/factor/: imu_factor.h  integration_base.h  model_factor.h
(+5 files in other folders)
